/**
 * The ChatThread class implements Runnable to simulate a chat message exchange between two students
 * Single thread of execution for sending a message from one student (sender) to another (receiver)
 */

public class ChatThread implements Runnable {
    public ChatThread(UniversityStudent sender, UniversityStudent receiver, String message) {
        // Constructor
        /**
         * Constructor to create a new chat thread.
         *
         * @param sender The student who is sending the message.
         * @param receiver The student who will receive the message
         * @param message The message being sent
         */
    }

    /**
     * Runs the chat message exchange when the thread starts
     * Simulates sending a message from sender to receiver
     */
    @Override
    public void run() {
        // Method signature only
    }
}
