/**
 * The FriendRequestThread class simulates a thread for sending a friend request from one student to another
 * This class implements Runnable so the friend request process can happen at the same time as other processes
 */

public class FriendRequestThread implements Runnable {
    /**
     * Constructor to create a new friend request thread.
     *
     * @param sender The student sending the friend request.
     * @param receiver The student receiving the friend request.
     */
    public FriendRequestThread(UniversityStudent sender, UniversityStudent receiver) {
        // Constructor
    }


    /**
     * Where the friend request process happens when the thread starts
     */
    @Override
    public void run() {
        // Method signature only
    }
}
